--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-  "start": "node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +15,14 @@
   "dependencies": {
     "@prisma/client": "^6.19.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.19",
     "express": "^5.2.1",
     "prisma": "^6.19.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
